--- a/day1_html/styleforHW2.css
+++ b/day1_html/styleforHW2.css
@@ -1,7 +1,4 @@
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+fieldset{
+    width: 500px;
+    margin: auto;
 }
