--- a/day2_css/style.css
+++ b/day2_css/style.css
@@ -3,61 +3,105 @@
     margin: 0;
     padding: 0;
 }
-body{
-    color: #fff;
-    background-color: #fff;
-    font-family: Arial, sans-serif;
-}
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    padding: 30px;
-    position: relative;
-}
-nav img{
-    height: 50px;
-}
-nav ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-}
-nav ul li{
-    margin-right: 20px;
-}
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: xx-small;
-}
-nav ul li h2 {
-    color: #fff;
-    text-decoration: none;
-    font-size: medium;
-}
-nav ul li p {
-    color: #fff;
-    text-decoration: none;
-    font-size: xx-small;
-}
 
 header{
-    background-image: url(https://cdn.pic.in.th/file/picinth/Picture9.jpeg);
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 255, 0.697),
+        rgba(255, 255, 255, 0.5)
+      ),
+      url("./img/background.jpg");
+
     height: 100vh;
     background-size: cover;
     flex-direction: column;
     justify-content: center;
 }
+nav{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    background-color: rgba(0, 0, 255, 0.697),rgba(255, 255, 255, 0.5);
+    color: white;
+    justify-content: space-around; 
+}
+nav ul{
+    width: 50%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+a:link{
+    color: #ffffff;
+    text-decoration: none;
+}
+a:hover{
+    color: #ffffff;
+    text-decoration: none;
+}
+a:visited{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+    .logo img{
+    height: 70px;
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 main{
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: start;
-    position: relative;
+    background-image: url(./img/background2.jpg);
+    height: 90vh;
+    background-size: cover;
+}
+main img{
+    padding-left: 50px;
+    padding-right: 20px;
+    padding-bottom: 100px;
+
+}
+.text{
+    width: 410px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 100px;
 }
 footer{
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    background-color: rgba(250, 250, 250, 0.897);
+}
+.card1{
+    width: 250px;
+    margin: auto;
+}
+.card2{
+    width: 250px;
+    margin: auto;
+}
+.card3{
+    width: 250px;
+    margin: auto;
+}
+.card4{
+    width: 250px;
+    margin: auto;
+}
+h3{
+    display: flex;
     justify-content: center;
-    align-items: start;
-    position: relative;
 }
